Fixed projects page on mobile

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -159,11 +159,20 @@
   .project-text {
     top: 120px;
   }
+
+  .project {
+    min-height: 200px;
+  }
+
 }
 
 @media (max-width: 980px) {
   .project-text {
     top: 90px;
+  }
+
+  .project {
+    min-height: 150px;
   }
 }
 
@@ -171,6 +180,7 @@
   .project-image > img {
     max-height: 300px;
   }
+
   .project .project-item{
     height: auto;
     max-height: 100%;
@@ -180,6 +190,10 @@
   }
 
   .project-text {
-    top: 250px;
+    top: none;
+  }
+
+  .single-project-text {
+    margin: 20px;
   }
 }
